# depth

./: .gitignore  LICENSE  README.md  SPEC.md  render.yaml  run.py
docs/: index.html  nsw-lalonde-report.html
server/: __init__.py  app.py  engine.py
server/datasets/: build_datasets.py  large.json  manifest.json  medium.json  small.json
server/static/: app.js  index.html  styles.css
shiftab/: README.md  SPEC.md  pyproject.toml
shiftab/src/shiftab/: __init__.py  core.py  datasets.py  plot.py
tests/: test_api.py
