[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shiftab"
version = "0.1.0"
description = "Shift-function A/B analysis with simultaneous confidence bands (Doksum & Sievers, 1976)."
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
